stdout
compiling CircularBufferTest.cpp
compiling AllTests.cpp
compiling CircularBuffer.c
CircularBuffer.c: In function 'CircularBuffer_IsEmpty':
CircularBuffer.c:29:12: error: 'True' undeclared (first use in this function); did you mean 'true'?
   29 |     return True;
      |            ^~~~
      |            true
compilation terminated due to -Wfatal-errors.
make: *** [/cpputest/build/MakefileWorker.mk:525: objs/CircularBuffer.o] Error 1
